app/(pages)/[year]/sibiu/page.module.scss
.page-container{
  position:relative;
  float:left;
  width:100%;
  
  
:global{

  .section-title-on-mobile{
    position:relative;
    line-height:100px;
    float:left;
    width:100%;
    font-size:50px;
    font-weight: bold;
    text-align: center;
    color: #000 !important;
    text-transform: uppercase;
    margin-top:10px;
    overflow:hidden;

    @media (max-width: 320x) {
        font-size:40px;
    }
  }


  section{
    position:relative;
  }

  section.swiper-section{
    float:left;
    position:relative;
    
    height: 400px;
    width: 100%;
    margin-top:10px;

  .category-title{
    position:absolute;
    bottom:36px;
    left:43%;
    border: 4px solid #000;
    padding:0 10px;
    background-color: #fff;
    z-index:2;
    font-size:36px;
    font-weight: 600;
    text-transform: uppercase;
  }

    @media (max-width: 768px) {
        height: auto;
    }

  }

  section.mission-section{
      float:left;
    }

  section.team-section{
    position:relative;
    float:left;
    width:100%;
    overflow: hidden;
    margin-top:30px;
    margin-bottom:30px;

  }

  }

}

